# MCPSKELETOR

./: Cargo.toml  README.md
crates/mcp-server/src/: lib.rs  transport.rs
crates/mcp-transport-p2p/: Cargo.toml
crates/mcp-transport-p2p/docs/: libp2p_structures.md
crates/mcp-transport-p2p/src/: config.rs  lib.rs
crates/mcp-transport-p2p/src/protocol/: handler.rs  mod.rs
crates/mcp-transport-p2p/src/transport/: mod.rs  webrtc_impl.rs  webrtc_websys_impl.rs  webtransport_impl.rs  webtransport_websys_impl.rs
crates/mcp-transport-p2p/tests/: integration_test.rs
examples/servers/src/: p2p_server.rs
