[workspace]
members = [
    "crates/*",
    "examples/clients",
    "examples/servers",
    "examples/macros"
]
resolver = "2"

[workspace.dependencies]
mcp-core = { path = "./crates/mcp-core" }
mcp-macros = { path = "./crates/mcp-macros" }
mcp-server = { path = "./crates/mcp-server" }
mcp-transport-p2p = { path = "./crates/mcp-transport-p2p" }

[workspace.package]
edition = "2021"
version = "1.0.7"
authors = ["Block <ai-oss-tools@block.xyz>"]
license = "MIT"
repository = "https://github.com/modelcontextprotocol/rust-sdk/"
description = "Rust SDK for the Model Context Protocol"
