[package]
name = "mcp-transport-p2p"
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "P2P Transport implementation for MCP Server using libp2p"

[dependencies]
mcp-core = { workspace = true }
mcp-server = { workspace = true }
anyhow = "1.0.94"
thiserror = "1.0"
tokio = { version = "1.32", features = ["full"] }
libp2p = { version = "0.55.0", features = [
    "tokio",
    "websocket",
    "noise",
    "ping",
    "yamux",
    "gossipsub",
    "identify",
    "request-response",
    "relay",
    "dns",
    "tcp",
    "tls",
    "upnp"
]}
# For WebAssembly environments
libp2p-websocket-websys = { version = "0.5.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "Window"], optional = true }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
rand = "0.8"
uuid = { version = "1.4", features = ["v4", "serde"] }
bytes = "1.4"
once_cell = "1.18"
num_cpus = "1.0"

[features]
default = []
wasm = ["libp2p-websocket-websys", "wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = "0.5"
mockall = "0.11"
